---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 3
@main(v0: int) {
  c1_: int = const 3;
  v2_: int = add c1_ v0;
  c3_: int = const 0;
  c4_: int = const 21;
  v5_: int = id c1_;
  v6_: int = id v2_;
  v7_: int = id c3_;
  v8_: int = id v0;
  v9_: int = id c4_;
.b10_:
  print v9_;
  c11_: int = const 1;
  v12_: int = add c11_ v5_;
  v13_: int = add v7_ v9_;
  c14_: int = const 7;
  v15_: int = add c14_ v9_;
  v16_: bool = lt v5_ v8_;
  v5_: int = id v12_;
  v17_: int = id v6_;
  v7_: int = id v13_;
  v18_: int = id v8_;
  v9_: int = id v15_;
  v6_: int = id v17_;
  v8_: int = id v18_;
  br v16_ .b10_ .b19_;
.b19_:
  print v7_;
  print v2_;
  print v5_;
  ret;
}
